fixed gap in links row

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h3 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 10s0px;
+    gap: 50px;
     align-items: top;
     margin: 20px 0;
 }
